--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="container">
+  <div class="header"></div>
+  <div class="form-container">
+    <form action="">
+      <h1>Sign In</h1>
+      <div class="form-control">
+        <div class="textbox">
+          <input id="email" type="text" />
+          <label for="email">Email or phone number</label>
+        </div>
+      </div>
+      <div class="form-control">
+        <div class="textbox">
+          <input id="email" type="text" />
+          <label for="email">Password</label>
+        </div>
+      </div>
+      <button>Sign In</button>
+      <div class="form-check">
+        <div class="remember">
+          <input id="remember" type="checkbox">
+          <label for="remember">Remember me</label>
+        </div>
+        <div class="help">
+          <a href="#">Need help?</a>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
