--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -8,7 +8,7 @@
       />
     </div>
     <div class="action">
-      <input type="button" value="Sign In" class="signin" />
+      <input type="button" value="Sign In" class="signin" routerLink="login"/>
     </div>
   </div>
   <div class="sections">
